# genetic

./: .gitignore  Cargo.toml
analysis/: analyzer.sh  averager.py  plotter.py
src/: algorithm.rs  generator.rs  loader.rs  main.rs  opt.rs
src/data_structures/: algorithm_configuration.rs  individual.rs  mod.rs  population.rs  task.rs  utils.rs
